# GHOST

./: .gitignore  CMAKE.md  CMakeLists.txt  Dockerfile  GHOST  GHOST.cpp  Makefile  README.md  a.out
docs/: ARCHITECTURE.md  BUILD.md  CODE_GUIDELINES.md  FUNCTIONALITY.md
include/core/: Config.hpp  Ghost.hpp
include/interfaces/: IEncryptionStrategy.hpp  IExfilMethod.hpp  IGatheringMethod.hpp  IImpactMethod.hpp  IModule.hpp  IPersistenceMethod.hpp
include/modules/: Exfiltration.hpp  Gathering.hpp  Impact.hpp  Persistence.hpp
include/modules/exfiltration/: HttpPost.hpp
include/modules/gathering/: EtcPasswd.hpp  EtcShadow.hpp  Ssh.hpp  SystemInfo.hpp
include/modules/impact/: Encryption.hpp  EncryptionStrategies.hpp  Wiper.hpp
include/modules/persistence/: CronJob.hpp  RunControl.hpp  Service.hpp
include/network/: Comms.hpp
include/utils/: CryptoUtils.hpp  DataVault.hpp  FileUtils.hpp  Logger.hpp  Obfuscation.hpp  SystemUtils.hpp  UuidUtils.hpp
libpsl_src-install/lib/pkgconfig/: libpsl.pc
src/: GHOST.cpp  apiSchema.hpp  config.hpp  httpClient.hpp  main.cpp  utils.hpp
src/core/: Config.cpp  Ghost.cpp
src/modules/: Exfiltration.cpp  Gathering.cpp  Impact.cpp  Persistence.cpp  escalation.hpp  exfiltration.hpp  impact.hpp  persistence.hpp
src/modules/exfiltration/: HttpPost.cpp
src/modules/gathering/: EtcPasswd.cpp  EtcShadow.cpp  Ssh.cpp  SystemInfo.cpp
src/modules/impact/: Encryption.cpp  Wiper.cpp
src/modules/persistence/: CronJob.cpp  RunControl.cpp  Service.cpp
src/network/: Comms.cpp
src/utils/: CryptoUtils.cpp  DataVault.cpp  FileUtils.cpp  SystemUtils.cpp  UuidUtils.cpp
tests/: CMakeLists.txt
